# django_cowsay

./: manage.py  pyproject.toml
http_forms_and_cows_app/: admin.py  apps.py  forms.py  models.py  views.py
http_forms_and_cows_app/migrations/: 0001_initial.py
http_forms_and_cows_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: history.html  index.html
